# backendprojetointegrador

./: .env_exemplo  .pdm-python  .pdm.toml  db.sqlite3  pyproject.toml  requirements.txt
config/: .env  settings.py  urls.py
jsbackend/: admin.py  apps.py  models.py  views.py
jsbackend/migrations/: 0001_initial.py  0002_fornecedor.py  0003_alter_fornecedor_options.py  0004_movel.py  0005_tipo_usuario.py  0006_usuario.py  0007_compra_itenscompra.py  0008_alter_itenscompra_movel.py  0009_alter_movel_options_movel_foto.py  0010_cliente_remove_usuario_username.py  0011_remove_usuario_tipousuario_usuario_tipo.py  0012_delete_cliente_delete_tipo_usuario.py  0013_remove_categoria_material_movel_cor.py
jsbackend/models/: __init__.py  categoria.py  cliente.py  compra.py  fornecedor.py  movel.py  tipousuario.py  usuario.py
jsbackend/serializers/: __init__.py  categoria.py  cliente.py  compra.py  fornecedor.py  movel.py  tipousuario.py  usuario.py
jsbackend/views/: __init__.py  cliente.py  compra.py  fornecedor.py  movel.py  tipousuario.py  usuario.py
uploader/migrations/: 0001_initial.py
